# kagisearch

./: Cargo.toml  README.md
.github/scripts/: setup_version.py  verify_version.py
.github/workflows/: release.yaml  test_behavior.yaml
examples/: search.rs
src/: auth.rs  consts.rs  error.rs  lib.rs  page.rs  search.rs  spawner.rs
tests/: behavior_test.rs
